make moving between panes more vim like and rebinded tmux prefix to C-a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,4 +43,10 @@ bind C-a send-prefix
 
 #vim mode
 set -g status-keys vi
-setw - mode-keys vi
+setw -g mode-keys vi
+
+#move commands
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
