--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,18 +35,36 @@ set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
 set -g default-terminal "screen-256color-bce"
 
+#vim mode
+set -g status-keys vi
+setw -g mode-keys vi
+
 #KEYBINDINGS
 #tmux prefix key
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-#vim mode
-set -g status-keys vi
-setw -g mode-keys vi
+#resize commands
+unbind C-Up
+unbind C-Down
+unbind C-Left
+unbind C-Right
+bind-key -r < resize-pane -L 5
+bind-key -r - resize-pane -D 5
+bind-key -r + resize-pane -U 5
+bind-key -r > resize-pane -R 5
 
 #move commands
+unbind Up
+unbind Down
+unbind Left
+unbind Right
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+#mouse stuff
+set -g mouse-mode on
+set -g mouse-resize-pane on
