switched to vim-plug

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,9 +41,9 @@ setw -g mode-keys vi
 
 #KEYBINDINGS
 #tmux prefix key
-set -g prefix C-w
+set -g prefix C-a
 unbind C-b
-bind C-w send-prefix
+bind C-a send-prefix
 
 #resize commands
 unbind C-Up
